@@ -9,12 +9,12 @@
  * it under the terms of the GNU General Public License as
  * published by the Free Software Foundation, either version 3 of the
  * License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public
  * License along with this program.  If not, see
  * -> http://www.gnu.org/licenses/gpl-3.0.html
@@ -25,6 +25,7 @@ package org.eomasters.snap.utils;
 
 import com.bc.ceres.binding.Converter;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 // registered EomToolbox to the ConverterRegistry
 // ConverterRegistry.getInstance().setConverter(Path.class, new PathConverter());
@@ -40,7 +41,7 @@ public class PathConverter implements Converter<Path> {
     if (text.isEmpty()) {
       return null;
     }
-    return Path.of(text);
+    return Paths.get(text);
   }
 
   @Override
